# simpleWoT

./: .gitignore  README.md  binary_codec.py  ble_gap.py  ble_gatt.py  main.py  pyproject.toml  requirements.txt  ruuviAir.td.json  td_parser.py  test.py  wot.py  xiaomiFlowerCare.td.json
example_descriptions/: ruuviTag.td.json  xiaomiFlowerCare.td.json  xiaomiThermometer.td.json
src/simplewot/: td_parser.py  wot.py
src/simplewot/bindings/: ble_gap.py  ble_gatt.py  http.py
src/simplewot/codecs/: binary_codec.py  json_codec.py
