[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleWoT"
version = "0.1.0"
description = "A simple WoT library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak==2.1.1",
    "dbus-fast==4.0.0",
    "pyparsing==3.3.2",
    "rdflib==7.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]